--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   },
   "dependencies": {
     "@react-native-picker/picker": "2.11.1",
-    "@react-navigation/native": "^7.1.18",
-    "@react-navigation/native-stack": "^7.5.0",
+    "@react-navigation/native": "^7.1.19",
+    "@react-navigation/native-stack": "^7.6.2",
     "expo": "~54.0.18",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-gesture-handler": "^2.29.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
