--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.2",
+    "@react-navigation/stack": "^7.6.3",
     "expo": "~54.0.18",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
